<resources>
    <string name="app_name">作曲アプリ</string>
    <string-array name="list">
        <item>録音</item>
        <item>練習</item>
        <item>編集</item>
        <item>PLAY</item>
    </string-array>
    <string name="menu">メニュー</string>
    <string name="measure">小節</string>
    <string name="beat">拍</string>
    <string name="bpm">BPM</string>
    <string name="locater_tag">移動</string>
    <string name="code">コード</string>
    <string name="melody">メロディー</string>
    <string name="lyrics1">聞こえないフリして</string>
    <string name="lyrics2">ごまかしていたけど</string>
    <string name="b8sp2">8ビート スト p2</string>
    <string-array name="menu_list">
        <item>重要なお知らせ</item>
        <item>操作</item>
        <item>設定</item>
        <item>その他</item>
    </string-array>
    <string name="menu_list_add_for_develop">開発メニュー</string>
    <string name="close">閉じる</string>
    <string name="restart">オーディオ再起動</string>
    <string-array name="menu_list_devlop_sub">
        <item>オーディオ設定</item>
        <item>オーディオ実験</item>
    </string-array>
    <string name="buttonPlay1secSinStatic">1秒Staticサイン派再生</string>
    <string name="buttonPlay1secSinStatic16bit">1秒Staticサイン派再生(16bit)</string>
    <string name="buttonPlaySinStream16bit">Streamサイン派再生(16bit)(START)</string>
    <string name="buttonStopSinStream16bit">Streamサイン派再生(16bit)(STOP)</string>
    <string name="buttonPlaySinStream16bitHalfRate">Streamサイン派再生(16bit(レート半分))(START)</string>
    <string name="buttonStopSinStream16bitHalfRate">Streamサイン派再生(16bit(レート半分))(STOP)</string>
    <string name="buttonPlaySinStream16bitPriority">Streamサイン派再生(16bit)(START)(プライオリティー)</string>
    <string name="buttonStopSinStream16bitPriority">Streamサイン派再生(16bit)(STOP)(プライオリティー)</string>
    <string name="buttonPlayClick2">クリック音２(START)</string>
    <string name="buttonStopClick2">クリック音２(STOP)</string>
</resources>
